# access-experiment-generator

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  codecov.yml  pyproject.toml
.github/workflows/: cd.yml  check_links.yml  ci.yml
documentation/: .mkdocs.yml.un~  mkdocs.yml
documentation/docs/pages/: Perturbation-cookbook.md  Yaml-guide.md  index.md
examples/: Example_om2_forcing.yaml  Example_preserve_parameters.yaml  Example_remove_parameters.yaml  Experiment_generator_example.yaml  Experiment_generator_field_table.yaml  Experiment_manager.yaml
src/experiment_generator/: __init__.py  _version.py  base_experiment.py  common_var.py  config_updater.py  control_experiment.py  experiment_generator.py  f90nml_updater.py  field_table_updater.py  main.py  mom6_input_updater.py  nuopc_runconfig_updater.py  nuopc_runseq_updater.py  om2_forcing_updater.py  perturbation_experiment.py  state_store.py  utils.py
src/experiment_generator/tmp_parser/: field_table.py  mom6_input.py  nuopc_config.py  nuopc_seq.py  xml_config.py  yaml_config.py
tests/: conftest.py  test_base_experiment.py  test_common_var.py  test_config_updater.py  test_experiment_generator.py  test_f90nml_updater.py  test_field_table.py  test_main.py  test_mom6_input_updater.py  test_nuopc_runconfig_updater.py  test_nuopc_runseq_updater.py  test_om2_forcing_updater.py  test_perturbation_experiment.py  test_state_store.py  test_utils.py
